syntax = "proto3";

package jsgenerate_xray_webui.system;
option go_package = "github.com/zuiwuchang/xray_webui/protocol/system";

import "google/api/annotations.proto";

service System {
    // 返回瀏覽器標題
    rpc Title (TitleRequest) returns (TitleResponse){
        option (google.api.http) = {
            get: "/api/v1/system/title"
        };
    }
    // 返回當前程式版本信息
    rpc Version (VersionRequest) returns (VersionResponse){
        option (google.api.http) = {
            get: "/api/v1/system/version"
        };
    }
    // 返回服務啓動時間
    rpc StartAt (StartAtRequest) returns (StartAtResponse){
        option (google.api.http) = {
            get: "/api/v1/system/start_at"
        };
    }
}
message TitleRequest{
}
message TitleResponse{
    string result = 1;
}
message VersionRequest{
}
message VersionResponse{
    string platform = 1;
    string version = 2;
}
message StartAtRequest{
}
message StartAtResponse{
    int64 result = 1;
}